--- a/package.json
+++ b/package.json
@@ -28,12 +28,10 @@
     }
   },
   "lint-staged": {
-    "**/*.{js,json}": [
-      "npm run lint-script-staged --",
-      "git add"
-    ],
     "**/*.js": [
-      "npm run test"
+      "npm run lint-script-staged --",
+      "npm run test",
+      "git add"
     ]
   }
 }
