--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "ava",
     "lint": "eslint --fix",
     "lint-script-staged": "npm run lint"
   },
@@ -15,6 +15,7 @@
     "axios": "^0.19.0"
   },
   "devDependencies": {
+    "ava": "^2.4.0",
     "eslint": "^6.4.0",
     "eslint-config-prettier": "^6.3.0",
     "eslint-plugin-prettier": "^3.1.0",
