--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint --fix",
-    "lint-script-staged": "npm run lint"
+    "lint-script-staged": "npm run lint",
+    "test": "jest --bail --findRelatedTests"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,7 @@
   "devDependencies": {
     "eslint": "^6.4.0",
     "eslint-config-prettier": "^6.3.0",
+    "eslint-plugin-jest": "^22.17.0",
     "eslint-plugin-prettier": "^3.1.0",
     "husky": "^3.0.5",
     "jest": "^24.9.0",
@@ -30,6 +32,7 @@
   "lint-staged": {
     "**/*.js": [
       "npm run lint-script-staged --",
+      "npm test --",
       "git add"
     ]
   }
