--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "lint": "eslint --fix",
     "lint-script-staged": "npm run lint",
-    "test": "jest --bail --findRelatedTests"
+    "test": "jest",
+    "lint-test-staged": "jest --bail --findRelatedTests"
   },
   "keywords": [],
   "author": "",
@@ -32,7 +33,7 @@
   "lint-staged": {
     "**/*.js": [
       "npm run lint-script-staged --",
-      "npm test --",
+      "npm run lint-test-staged --",
       "git add"
     ]
   }
