--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "keywords": [
+    "gatsby",
+    "gatsby-plugin",
+    "gatsby-source-plugin",
+    "nytimes",
+    "nytimes-api"
+  ],
   "scripts": {
     "lint": "eslint --fix",
     "lint-script-staged": "npm run lint",
