--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "test": "jest",
     "lint-test-staged": "jest --bail --findRelatedTests"
   },
-  "author": "",
   "license": "Apache-2.",
   "dependencies": {
     "axios": "^0.19.0"
@@ -42,5 +41,13 @@
       "npm run lint-test-staged --",
       "git add"
     ]
+  },
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/yurm04/gatsby-source-nytimes-books-api"
+  },
+  "author": {
+    "name": "Yuraima Estevez",
+    "url": "https://www.yuraima.com"
   }
 }
